--- a/css/main.css
+++ b/css/main.css
@@ -646,7 +646,7 @@ article p{
     left: 0px;
     z-index: 10;
     margin-top: -30px;
-    //margin-left: 4px;
+    /*margin-left: 4px;*/
     width: 4px;
     height: 60px;
     -webkit-box-shadow: inset -5px 0 4px -4px rgba(0, 0, 0, 0.25);
