Fixes for menu to mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ header .header-bg{
     padding: 0 5px;
     content: "\2261";
     color: #765028;
-    font: 2em "arial";
+    font: 26px "arial";
 }
 
 .menu-wraper{
