--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ a:focus{
     padding: 0 5px;
 }
 
+.hidden-desctop{
+    display: none;
+}
+
 /* Home banner */
 .home-banner-bg{
     position: relative;
@@ -233,14 +237,9 @@ header .header-bg{
 }
 
 #top-menu{
-    /*display: inline-block;
-    float: right;
-    clear: left;*/
     margin: 0;
     padding-left: 0;
-    /*width: 80%;*/
     list-style: none;
-    /*box-sizing: content-box;*/
 }
 
 #top-menu > li{
@@ -324,21 +323,6 @@ header .header-bg{
     position: relative;
     padding: 75px 15px 69px 15px;
 }
-
-/*.home-slider-container:after{
-    position: absolute;
-    bottom:0;
-    display: block;
-    margin: -5px 25% 0 25%;
-    width: 50%;
-    height: 5px;
-    border-top-left-radius: 70%;
-    border-top-right-radius: 70%;
-    -webkit-box-shadow: inset 0 -6px 6px -6px rgba(0, 0, 0, 0.25);
-       -moz-box-shadow: inset 0 -6px 6px -6px rgba(0, 0, 0, 0.25);
-            box-shadow: inset 0 -6px 6px -6px rgba(0, 0, 0, 0.25);
-    content: "";
-}*/
 
 #home-slider{
     position: relative;
@@ -604,14 +588,15 @@ article p{
 .add-cart{
     position: relative;
     padding: 11px 57px 11px 15px;
-    background: #ffffff;
-    background: -webkit-linear-gradient(#fbfbfb, #f3f3f3 75%);
-    background: -moz-linear-gradient(#fbfbfb, #f3f3f3 75%);
-    background: linear-gradient(#fbfbfb, #f3f3f3 75%);
+    background-color: #ffffff;
+    background: -webkit-linear-gradient(transparent, #f3f3f3 75%);
+    background: -moz-linear-gradient(transparent, #f3f3f3 75%);
+    background: linear-gradient(transparent, #f3f3f3 75%);
     border: 0;
     border-radius: 19px;
     color: #735659;
     font-size: 11px;
+    transition: background-color 0.6s linear;
 }
 
 .add-cart:after{
@@ -624,7 +609,7 @@ article p{
 }
 
 .add-cart:hover{
-    background: #ffffff;
+    background-color: #f3f3f3;
 }
 
 /* Slider show */
@@ -645,7 +630,6 @@ article p{
     right: 0;
     z-index: 10;
     margin-top: -33px;
-    /*margin-right: 4px;*/
     width: 4px;
     height: 60px;
     -webkit-box-shadow: inset 5px 0 4px -4px rgba(0, 0, 0, 0.25);
@@ -660,7 +644,6 @@ article p{
     left: 0;
     z-index: 10;
     margin-top: -33px;
-    /*margin-left: 4px;*/
     width: 4px;
     height: 60px;
     -webkit-box-shadow: inset -5px 0 4px -4px rgba(0, 0, 0, 0.25);
@@ -785,18 +768,19 @@ article p{
     top: 5px;
     right: 5px;
     padding: 7px 25px;
-    background: #6a343a;
-    background: -webkit-linear-gradient(#964f58, #562429 75%);
-    background: -moz-linear-gradient(#964f58, #562429 75%);
-    background: linear-gradient(#964f58, #562429 75%);
+    background-color: #964f58;
+    background-image: -webkit-linear-gradient(transparent, #562429 75%);
+    background-image: -moz-linear-gradient(transparent, #562429 75%);
+    background-image: linear-gradient(transparent, #562429 75%);
     border: 1px solid #3e1116;
     color: #c2a281;
     border-radius: 3px;
     font-size: 9px;
+    transition: background-color 0.6s linear;
 }
 
 .newsletter-form button:hover{
-    background: #562429;
+    background-color: #562429;
 }
 
 .page-shadow{
@@ -953,7 +937,7 @@ footer .social-icon div:hover{
     }
 
     footer{
-        padding: 20px 5px 30px 5px;
+        padding: 20px 5px 20px 5px;
     }
 
     footer .float-left,
@@ -966,9 +950,12 @@ footer .social-icon div:hover{
         text-align: center;
     }
 
-    .copyright{
-        position: absolute;
-        bottom: 20px;
+    .hidden-desctop{
+        display: block;
+    }
+
+    .hidden-mobile{
+        display: none;
     }
 }
 
